  * Update iwlwifi-3945 to 15.32.2.9. (closes: #526114)
  * linux/defines: Fix upstream url.

  [ Ben Hutchings ]
  * Add Radeon RS600, R600-family and R700-family firmware.
  * Add Ralink RT2860/RT2890 and RT2870 firmware.
  * Add firmware for use with ivtv and pvrusb2 drivers (closes: #524230),
    thanks to Ian Campbell <ijc@hellion.org.uk>.

  [ dann frazier ]
  * Fix subject-verb agreement problem in firmware-linux description.
    (Closes: #524382)

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 12 Apr 2009 16:33:56 +0100

firmware-nonfree (0.16) unstable; urgency=low

  * Update Intel Pro 2200/2915 firwmare, version 3.1. (closes: #521531)
  * Update qlogic firmwares: ql2300_fw.bin-3.03.27, ql2322_fw.bin-3.03.27,
    ql2400_fw.bin-4.04.05, ql2500_fw.bin-4.04.05. (closes: #509693)

 -- maximilian attems <maks@debian.org>  Wed, 01 Apr 2009 16:38:02 +0200

firmware-nonfree (0.15) unstable; urgency=low

  [ Ben Hutchings ]
  * Add 3Com Typhoon (3CR990) firmware.
  * Add ATI Rage 128 and Radeon firmware.
  * Add BayCom DAB-USB firmware.
  * Add Intel PRO/100 firmware.
  * Add Kawasaki LSI KL5KUSB101 firmware.
  * Add Matrox G20/G400/G550 firmware.
  * Add QLogic QLA1xxx firmware.
  * Add Tehuti network card firmware.

  [ Bastian Blank ]
  * Remove own initramfs-hook.

  [ maximilian attems ]
  * Update iwlwifi-4965 to 228.57.2.23. (closes: #502326)
  * Add iwlwifi-5000-1.ucode. (closes: #497717)
    Thanks Frank Lin PIAT <fpiat@klabs.be> for patch.
  * Update iwlwifi-3945 to 15.28.2.8. (closes: #497593)
  * Bump standards to 3.8.1, no changes required.

  [ dann frazier ]
  * Update linux-support build-dep to 2.6.29-1.
  * Update bnx2 firmware to 2.6.29.

 -- maximilian attems <maks@debian.org>  Fri, 27 Mar 2009 12:34:17 +0100

firmware-nonfree (0.14) unstable; urgency=low

  * Generate license acceptation prompt, based on sun-java5. (closes: #504668)
  * Add Intel Pro 2100 firwmare, version 1.3. (closes: #504671)