@@ -1,3 +1,3 @@
-The binary firmwares are downloaded from @uri@.
+The binary firmware may be downloaded from @uri@.
 
 @license@
