@@ -8,7 +8,7 @@ Default: false
 Description: Do you agree with the @license-title@ license terms?
  In order to install this package, you must agree to its license terms, the
  "@license-title@".
- Not accepting will cancel the installation.
+ If you do not agree, the installation will be canceled.
 
 Template: firmware-@package@/license/error
 Type: error
@@ -16,5 +16,5 @@ Description: Declined @license-title@
  If you do not agree to the "@license-title@" 
  license terms you cannot install this software.
  .
- The installation of this package will be canceled.
+ The installation of this package has been canceled.
 
