@@ -10,6 +10,8 @@ firmware-nonfree (0.17) UNRELEASED; urgency=low
   * Add Ralink RT2860/RT2890 and RT2870 firmware.
   * Add firmware for use with ivtv and pvrusb2 drivers (closes: #524230),
     thanks to Ian Campbell <ijc@hellion.org.uk>.
+  * Fix grammatical errors in the templates for package descriptions,
+    copyright files and EULA prompts
 
   [ dann frazier ]
   * Fix subject-verb agreement problem in firmware-linux description.
